<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="action_settings">Configuracion</string>
    <string name="title_activity_vida_nocturna">Vida Nocturna</string>
    <string name="title_activity_vida_nocturna1">VIDA NOCTURNA</string>
    <string name="title_activity_d_club">Antros</string>
    <string name="title_activity_bares">Bares</string>
    <string name="title_activity_info_dclub">D Club</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_plazas_comerciales">Plazas Comerciales</string>
    <string name="title_activity_info_plaza_cumbres">Plaza Cumbres</string>
    <string name="title_activity_info_maddox">Maddox</string>
    <string name="title_activity_cafeterias">Cafeterías</string>
    <string name="title_activity_info_nuevo_sur">Plaza Nuevo Sur</string>
    <string name="title_activity_info_san_agustin">Plaza Fiesta San Agustín</string>
    <string name="title_activity_info_valle_oriente">Galerías Valle Oriente</string>
    <string name="title_activity_the_nada">TheNada</string>
    <string name="title_activity_info_the_nada">The Nada</string>
    <string name="title_activity_info_tierra_libre">Tierra Libre</string>
    <string name="title_activity_info_galeria_cafe">La Galería Cafe</string>
    <string name="title_activity_info_punta_cielo">Café Punta del Cielo</string>
    <string name="title_activity_info_republica">Republica</string>
    <string name="title_activity_info_press">Press</string>
    <string name="title_activity_info_strana">Strana</string>
    <string name="title_activity_info_barezzito">Barezzito</string>
    <string name="title_activity_info_classico">Classico</string>
    <string name="title_activity_sr_mostacho_info">Sr. Mostacho</string>
    <string name="title_activity_info_la_macarena">La Macarena</string>
    <string name="title_activity_info_el_costenito">El Costeñito</string>
    <string name="title_activity_info_la_clamateria">La Clamateria</string>
    <string name="title_activity_info_la_coqueta">La Coqueta</string>
    <string name="title_activity_info_la_shoteria">La Shoteria</string>
    <string name="restaurantes">RESTAURANTES</string>
    <string name="hoteles">HOTELES</string>
    <string name="cafeterias">CAFETERIAS</string>
    <string name="museos">MUSEOS</string>
    <string name="parques">PARQUES</string>
    <string name="hospitales">HOSPITALES</string>
    <string name="plazasComerciales">PLAZAS COMERCIALES</string>
    <string name="directorio">DIRECTORIO</string>
    <string name="title_activity_hoteles" />
    <string name="title_activity_info_live_aqua" />
    <string name="title_activity_cinco_estrellas" />
    <string name="title_activity_tres_estrellas" />
    <string name="title_activity_cuatro_estrellas" />
    <string name="title_activity_info_fiesta_inn" />
    <string name="title_activity_info_safi" />
    <string name="title_activity_info_krystal" />
    <string name="title_activity_info_holiday_inn" />
    <string name="title_activity_info_antaris" />
    <string name="title_activity_info_habita" />
    <string name="title_activity_info_four_points" />
    <string name="title_activity_info_best_western" />
    <string name="title_activity_info_quality_inn" />
    <string name="title_activity_info_city_express" />
    <string name="title_activity_info_lq_hotel" />
    <string name="title_activity_restaurantes">Restaurantes</string>
    <string name="comida_mexicana">Cocina Mexicana</string>
    <string name="comida_brasileira">Cocina Brasileña</string>
    <string name="title_activity_comida_mexicana">Cocina Mexicana</string>
    <string name="title_activity_info_luna_mexicana">Luna Mexicana</string>
    <string name="luna_mexicana_text1">Excelente lugar, buena musica, buena atención y sobre todo se come muy rico.</string>
    <string name="horario">Horario:</string>
    <string name="direccion">Direccion:</string>
    <string name="horario_luna_mex">Lunes a Domingo de 8:00 a 00:00</string>
    <string name="direccion_luna_mex">Calle Constituyentes de Nuevo Leon 216, Álamos Corregidora, 64590 Monterrey, N.L.</string>
    <string name="ver_mapa">VER EN MAPA</string>
    <string name="title_activity_info_los_frijoles">Los Frijoles</string>
    <string name="los_frijoles_text1">Alegre merendero y bar con terraza y decoración campestre en donde se ofrece buffet de platillos mexicanos.</string>
    <string name="horario_los_frijoles">Lunes a Domingo de 8:00 a 19:00</string>
    <string name="direccion_los_frijoles">Calle Albino Espinosa, Centro, 64000 Monterrey, N.L.</string>
    <string name="title_activity_info_san_carlos">San Carlos</string>
    <string name="san_carlos_text1">Restaurante familiar con estilo clásico conocido por su carne asada al carbón y su comida regiomontana.</string>
    <string name="horario_san_carlos">Lunes a Domingo de 7:00 a 00:00</string>
    <string name="direccion_san_carlos">Av. Ignacio Morones Prieto 2803, Loma Larga, 64710 Monterrey, N.L.</string>
    <string name="title_activity_info_los_cabritos">Los Cabritos</string>
    <string name="los_cabritos_text1">Excelente espacio para comer en familia, un deleite el sabor y textura de nuestros platillos.</string>
    <string name="horario_los_cabritos">Lunes a Domingo de 11:00 a 23:00</string>
    <string name="direccion_los_cabritos">José Silvestre Aramberri Pte. 1010, Centro, 64000 Monterrey, N.L.</string>
    <string name="title_activity_info_taqueria_juarez">Taqueria Juarez</string>
    <string name="taqueria_juarez_text1">Lugar con aire casual que ofrece tacos y antojitos mexicanos para llevar, comer ahí o entregar a domicilio.</string>
    <string name="horario_taqueria_juarez">Lunes a Domingo de 10:30 a 22:30 </string>
    <string name="direccion_taqueria_juarez">Calle Galeana 123 Nte, Centro, 64000 Monterrey, NL</string>
    <string name="title_activity_info_la_jarochita">La Jarochita</string>
    <string name="la_jarochita_text1">Pequeña casa con colorida decoración en donde se sirven antojitos mexicanos y platillos veracruzanos típicos.</string>
    <string name="horario_la_jarochita">Lunes a Domingo de 10:00 a 22:00</string>
    <string name="direccion_la_jarochita">Av. del Estado 386 B, Tecnológico, 64850 Monterrey, N.L.</string>
    <string name="title_activity_comida_brasileira">Cocina Brasileña</string>
    <string name="title_activity_info_picanha">Picanha Brasileira</string>
    <string name="picanha_text1">Un restaurante y bar colorido que cuenta con un menú extenso de platillos brasileños y cócteles creativos.</string>
    <string name="horario_picanha">Lunes a Domingo de 13:00 a 23:00</string>
    <string name="direccion_picanha">Sendero Sur 214, Local 1, Plaza heb HEB Contry, Contry, 64860 Monterrey, NL</string>
    <string name="title_activity_info_vira">Vira Vira</string>
    <string name="vira_text1">Este restaurante recibe a sus visitantes con un desfile de espadas digno de la realeza, las que exhiben cortes de carne brasileños.</string>
    <string name="horario_vira">Lunes a Domingo de 12:00 a 23:00</string>
    <string name="direccion_vira">Galerias Monterrey, Av Insurgentes 2500, Sin Nombre de Col 31, 64620 Monterrey, N.L.</string>
    <string name="title_activity_info_espadas_brasil">Espadas Brasileñas</string>
    <string name="espadas_text1">Un lugar agradable para comer , entre semanas tienen promoción para las mujeres, buena selección de carnes y cortes brasileños, y un buen salad bar</string>
    <string name="horario_espadas">Lunes a Domingo de 12:00 a 23:00</string>
    <string name="direccion_espadas">Avenida José Vasconcelos 1400, Del Valle, 66220 Monterrey, N.L.</string>
    <string name="title_activity_info_mr_pampas">Mr. Pampas</string>
    <string name="pampas_text1">Un lugar casual con decoraciones típicas que ofrece carnes asadas estilo Brasil y barra de ensaladas.</string>
    <string name="horario_pampas">Lunes a Domingo de 12:00 a 00:00</string>
    <string name="direccion_pampas">Calz. del Valle #400, Del Valle, 66220 San Pedro Garza García, NL</string>
    <string name="title_activity_museos" />
    <string name="title_activity_museo_del_acero" />
    <string name="title_activity_museo_de_historia" />
    <string name="title_activity_marco" />
    <string name="title_activity_museo_del_noreste" />
    <string name="title_activity_planetario_alfa" />
    <string name="croja">Cruz Roja</string>
    <string name="croja_direccion">Ave. Alfonso Reyes 2503 Nte. Col. Del Prado, Monterrey</string>
    <string name="croja_info">Ofrecer atención eficiente a la población en casos de emergencia y en situaciones de desastre, e impulsar acciones tendientes a incrementar la capacidad de las personas y las comunidades a través de la acción voluntaria.</string>
    <string name="oca">Hospital Oca</string>
    <string name="oca_direccion">Avenida José María Pino Suárez, 645 Monterrey</string>
    <string name="oca_info">Somos un hospital privado de tercer nivel con sede en la ciudad de Monterrey, con más de 40 años de experiencia en el sector. Actualmente figuramos entre los hospitales más grandes y de mayor prestigio en el país.</string>
    <string name="doctor">Doctor Hospital</string>
    <string name="doctor_direccion">Calle Ecuador 2331, Balcones de Galerías, 64620 Monterrey, N.L.</string>
    <string name="doctor_info">Doctors Hospital es reconocido como uno de los mejores hospitales privados en la ciudad de Monterrey, con servicios médicos de calidad mundial y tecnología de vanguardia, dedicados principalmente a brindarle una atención inigualable a usted y a su familia</string>
    <string name="imss">IMSS</string>
    <string name="imss_direcion">F. LOZANO Y ROBLE COL. BENITO JUÁREZ C.P. 64420 MONTERREY NUEVO LEÓN</string>
    <string name="direccion1">Dirección:</string>
    <string name="horariopalabra">Horario:</string>
    <string name="boton">VER EN MAPA</string>
    <string name="thenada_horario">Lunes a Domingo de 9:00am a 10:00pm</string>
    <string name="thenada_descripcion">Una cafetería un tanto locuaz y fodonga, que se esta volviendo el lugar del brunch. Su menú va más allá de un simple cafesito y su ambientación es la sensación.</string>
    <string name="tierralibre_horario">Martes a Domingo de 1:00pm a 10:00pm</string>
    <string name="tierralibre_descripcion">Café y jugos naturales acompañados de sándwiches y ensaladas en un artístico local con atmósfera cálida.</string>
    <string name="puntacielo_horario">Lunes a Domingo de 8:00am a 6:00pm</string>
    <string name="puntacielo_descripcion">Cafetería con concepto bonito y moderno, franquicias con buen ambiente y producto de calidad reconocido nacionalmente.</string>
    <string name="plazacumbres_horario">Lunes a Domingo de 11:00am a 9:00pm</string>
    <string name="plazacumbres_descripcion">Plaza con más de 120 locales destinados a tiendas de especialidad y más de 2,200 cajones de estacionamiento.</string>
    <string name="nuevosur_horario">Lunes a Domingo de 9:00pm a 12:00am</string>
    <string name="nuevosur_descripcion">Centro Comercial al aire libre ubicado al Sur de Monterrey. Cuenta con más de 90 puertas comerciales entre diversas tiendas, restaurantes, espacios verdes, etcétera.</string>
    <string name="sanagustin_horario">Lunes a Domingo de 9:00pm a 12:00am</string>
    <string name="sanagustin_descripcion">Es una de las plazas más grandes de México, fundada en 1988, ha crecido hasta incluir a tiendas y grandes almacenes dedicados a más de 150 actividades comerciales.</string>
</resources>