<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_nuevo_sur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mario.dispositivosmoviles.infoNuevoSur"
    tools:showIn="@layout/activity_info_nuevo_sur">

    <TextView
        android:text="Nuevo Sur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView36"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <TextView
        android:text="Avenida Revolución 2703, La Ladrillera, 64830"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView37"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:text="@string/direccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView38"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_above="@+id/textView37"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/nuevosur_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView39"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_above="@+id/textView38"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"/>

    <TextView
        android:text="@string/horariopalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView40"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView39"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/nuevosur_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView41"
        android:textColor="#000"
        android:textSize="18sp"
        android:paddingBottom="0dp"
        android:layout_above="@+id/textView40"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/nuevosur_ed"
        android:id="@+id/imageView3"
        android:paddingBottom="50dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView36"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>