<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_punta_cielo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mario.dispositivosmoviles.infoPuntaCielo"
    tools:showIn="@layout/activity_info_punta_cielo">

    <TextView
        android:text="Café Punta del Cielo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView72"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <TextView
        android:text="Dr José Ma. Coss 731, Centro, 64000 Monterrey, N.L."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView73"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:text="@string/direccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView74"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView73"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"/>

    <TextView
        android:text="@string/puntacielo_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView75"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_above="@+id/textView74"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"/>

    <TextView
        android:text="@string/horariopalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView76"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView75"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/puntacielo_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView77"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_above="@+id/textView76"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:paddingBottom="0dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="220dp"
        app:srcCompat="@drawable/puntadelcielo_ed"
        android:id="@+id/imageView9"
        android:paddingBottom="40dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView72"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>