<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_info_plaza_cumbres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mario.dispositivosmoviles.infoPlazaCumbres"
    tools:showIn="@layout/activity_info_plaza_cumbres">


    <TextView
        android:text="Plaza Cumbres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView26"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <TextView
        android:text="Alejandro de Rodas, Bosques de Las Cumbres, 64619 Monterrey, N.L."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView27"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:text="@string/direccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView27"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"/>

    <TextView
        android:text="@string/plazacumbres_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView29"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_above="@+id/textView28"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"/>

    <TextView
        android:text="@string/horariopalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView30"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView29"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/plazacumbres_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView31"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_above="@+id/textView29"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:paddingBottom="20dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/plazacumbres_ed"
        android:id="@+id/imageView2"
        android:paddingBottom="40dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView26"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>