<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_san_agustin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mario.dispositivosmoviles.infoSanAgustin"
    tools:showIn="@layout/activity_info_san_agustin">


    <TextView
        android:text="Plaza Fiesta San Agustín"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textView42"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <TextView
        android:text="Av. Real De San Agustin 222, Residencial San Agustín, 66260 San Pedro Garza García, NL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView43"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp"/>

    <TextView
        android:text="@string/direccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView44"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_above="@+id/textView43"
        android:layout_alignBottom="@+id/textView43"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp"/>

    <TextView
        android:text="@string/sanagustin_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView45"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_above="@+id/textView44"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"/>

    <TextView
        android:text="@string/horariopalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView46"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/textView45"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/sanagustin_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView47"
        android:textColor="#000"
        android:textSize="18sp"
        android:paddingBottom="5dp"
        android:layout_above="@+id/textView46"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:src="@drawable/sanagustin_ed"
        android:id="@+id/imageView4"
        android:paddingBottom="0dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView42"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>